--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 }
 .container {
     background-color: white;
-    max-width: 1750px;
+    min-width: 1900px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 400px;
@@ -62,5 +62,6 @@ body {
 .nature-6 {
     position: relative;
     top: -65px;
+    left: -130px;
 }
     
